# competitive-lib-rust

./: Cargo.toml  Makefile.toml  README.md  aliases.js  cargo-atcoder.toml  cargo_snippet.json  default_rust_snippet.json  expand.py  search-index.js  settings.html  source-files.js
benches/: my_benchmark.rs
competitive/: all.html  index.html  sidebar-items.js
competitive/binary_search/: fn.binary_search.html  index.html  sidebar-items.js
competitive/calc_comb/: fn.combination.html  index.html  sidebar-items.js  struct.Combination.html
competitive/combinations/: fn.combination.html  fn.nck.html  fn.nhk.html  index.html  sidebar-items.js  struct.Combination.html
competitive/data_structures/: index.html  sidebar-items.js
competitive/dp/: index.html  sidebar-items.js
competitive/format/: index.html  sidebar-items.js  trait.AtCoderFormat.html
competitive/geometry/: index.html
competitive/graph/: enum.DfsResultType.html  enum.Direction.html  fn.bfs.html  fn.dfs.html  fn.diktstra.html  fn.restore_path.html  index.html  sidebar-items.js  struct.DfsResults.html  struct.Edge.html  struct.ListGraph.html  struct.NeighborhoodIter.html  struct.NeighborhoodUnweightedIter.html  trait.NeighborhoodExt.html  type.UnweightedListGraph.html
competitive/graph2d/: fn.bfs2d.html  fn.dfs2d.html  index.html  sidebar-items.js  (+1 more)
src/: binary_search.rs  calc_comb.rs  combinations.rs  dp.rs  format.rs  graph.rs  graph2d.rs  lib.rs  math.rs  mod_int.rs  mod_int_generics.rs  prime.rs  scanner.rs  segment_tree.rs  test_utility.rs  union_find.rs  viz.rs
test/: bin.rs  out_bin.rs
(+138 files in other folders)
