[package]
name = "competitive"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/illumination-k/markov-clustering-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
rand = "0.4.2"

